--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -19,17 +19,15 @@ jobs:
       - name: Checkout the repo
         uses: actions/checkout@v3
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Login to Docker Registery
+        run: |
+          echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login docker.numenoreans.com -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          push: true
-          tags: ${{ vars.IMAGE_ADDR }}
+        run: |
+          docker build -t ${{ vars.IMAGE_ADDR }} .
+          docker push ${{ vars.IMAGE_ADDR }}
+
 
   deploy:
     name: Deploy project on production
@@ -41,25 +39,28 @@ jobs:
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.SSH_HOST }}
+          port: ${{ secrets.SSH_PORT }}
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
-          port: ${{ secrets.SSH_PORT }}
-          script: docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" -p "${{ secrets.DOCKERHUB_PASSWORD }}"
+          retries: 3
+          script: |
+            echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login docker.numenoreans.com -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: SSH server update image
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.SSH_HOST }}
+          port: ${{ secrets.SSH_PORT }}
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
-          port: ${{ secrets.SSH_PORT }}
+          retries: 3
           script: docker pull "${{ vars.IMAGE_ADDR }}"
 
       - name: SSH server update service
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.SSH_HOST }}
+          port: ${{ secrets.SSH_PORT }}
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
-          port: ${{ secrets.SSH_PORT }}
           script: n-services-update
